--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,16 @@ font-family: 'MyCustomFont', sans-serif;
   src: url('./assets/fonts/NetflixSans-Regular.otf');
 }
 
+.swiper{
+  @apply pl-[40px]
+}
+
+
+
+
+
+
+.my-custom-swiper{
+  @apply pl-[60px]
+}
 
